fix: fixed menu and spacing
NMS-96

--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -16,6 +16,8 @@ $font-size-40: 2.5rem; // 40px
 $font-size-48: 3rem; // 48px
 
 $behind-header-height: 124px;
+$page-header-padding-top: 60px;
+$page-header-padding-bottom: 60px;
 
 $transition-text-hover: all 125ms ease-in-out;
 
